folder-color (0.1.4) jammy; urgency=low

  * Fixed Yaru icons as default theme

 -- costales <costales.marcos@gmail.com>  Thu, 16 Oct 2022 20:06:31 +0000
