@@ -1,6 +1,5 @@
 #!/bin/bash
 rm -r ../icons
-rm -r ../po
 rm ../README
 
 # setup
@@ -8,7 +7,8 @@ sed -i '25,34d' ../setup.py
 sed -i 's/]),/])]/' ../setup.py
 sed -i 's/Change your folder color with just a click/Change your folder color in Nautilus/' ../setup.py
 
-# extension
+# po
+sed -i 's/folder_i18n/folder-color/' ../nautilus-extension/folder-color.py
 
 # debian
 rm ../debian/postinst
@@ -16,7 +16,7 @@ rm ../debian/postinst
 sed -i '2d' ../debian/install
 
 sed -i '14,15d' ../debian/control
-sed -i 's/ python3-nautilus, nautilus, / python3-nautilus, nautilus, folder-color-common, /' ../debian/control
+sed -i 's/ python3-nautilus, nautilus, / python3-nautilus, nautilus, /' ../debian/control
 
 sed -i '25,44d' ../debian/copyright
 
