@@ -1,6 +1,5 @@
 #!/bin/bash
 rm -r ../icons
-rm -r ../po
 rm ../README
 
 # setup
@@ -16,6 +15,11 @@ mv ../nautilus-extension/ ../nemo-extension
 sed -i 's/nautilus/nemo/g' ../nemo-extension/folder-color.py
 sed -i 's/Nautilus/Nemo/g' ../nemo-extension/folder-color.py
 
+# po
+sed -i 's/folder_i18n/folder-color-nemo/' ../nemo-extension/folder-color.py
+sed -i 's/folder-color/folder-color-nemo/' ../po/POTFILES.in
+sed -i 's/nautilus-extension/nemo-extension/' ../po/POTFILES.in
+
 # debian
 rm ../debian/postinst
 
@@ -27,7 +31,7 @@ sed -i '25,44d' ../debian/copyright
 
 sed -i 's/Source: folder-color/Source: folder-color-nemo/' ../debian/control
 sed -i 's/Package: folder-color/Package: folder-color-nemo/' ../debian/control
-sed -i 's/python3-nautilus, nautilus, /python-nemo, nemo, folder-color-common, /' ../debian/control
+sed -i 's/python3-nautilus, nautilus, /python-nemo, nemo, /' ../debian/control
 sed -i '14,15d' ../debian/control
 sed -i 's/Folder Color for Nautilus/Folder Color for Nemo/' ../debian/control
 sed -i 's/Change a folder color used in Nautilus/Change a folder color used in Nemo/' ../debian/control
