@@ -1,7 +1,7 @@
 #!/usr/bin/env python3
 
 # Folder Color 0.1.4 - https://github.com/costales/folder-color
-# Copyright (C) 2012-2020 Marcos Alvarez Costales - https://costales.github.io/
+# Copyright (C) 2012-2022 Marcos Alvarez Costales - https://costales.github.io/
 #
 # folder-color is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
